--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">Lerato Maretele</a>
+      <a class="navbar-brand" href="/index.html" title="Homepage">Lerato Maretele</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -58,19 +58,19 @@
         </ul>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
-    <h1>Lerato Maretele</h1>
-    <h3>Front-end developer, based in Randfontein, South Africa</h3>
-    <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+    <h2 class="text-center">👋 Hi I am</h2>
+    <h1 class="text-center">Lerato Maretele</h1>
+    <h3 class="text-center">Front-end developer, based in Randfontein, South Africa</h3>
+    <div class="navigation-links mb-5">
+      <a href="about.html#contact" class="primary-link" title="Contact Lerato Maretele">Contact me</a>
+      <a href="about.html" class="secondary-link" title="About Lerato Maretele">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <img
             src="images/yoga.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block" alt="Yoga project"
           />
         </div>
         <div class="col-md-6">
@@ -82,7 +82,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link project-link" title="Yoga project">Launch Yoga App</a>
           </div>
         </div>
         <div class="row mt-5">
@@ -95,16 +95,16 @@
             explicabo eum dolore.
             </p>
             <div class="mb-5 mt-5">
-              <a href="#" class="primary-link">Launch Weather App</a>
+              <a href="#" class="primary-link project-link" title="Weather project">Launch Weather App</a>
             </div>
           </div>
           <div class="col-md-6">
-            <img src="images/weather.png" class="img-fluid rounded">
+            <img src="images/weather.png" class="img-fluid rounded d-none d-sm-block" alt="Weather project">
           </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded">
+          <img src="images/yogurt.png" class="img-fluid rounded d-none d-sm-block" alt="Yogurt project">
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -115,7 +115,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link project-link" title="Yogurt project">Launch Yogurt App</a>
         </div>
       </div>
     </div>
